added home buttons

--- a/views/pokemon.hbs
+++ b/views/pokemon.hbs
@@ -1,4 +1,5 @@
 <!-- index.hbs -->
+<div class="home-button"><a href="/">Home</a></div>
 <h1>The pokemon page is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
