--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,12 @@
 <!-- index.hbs -->
+
+<!--
+Citation for the following file:
+Date: 2023-11-30
+Copied as a template then based on
+Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/
+--> 
+
 <h1>The server is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
 
