--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,10 +1,16 @@
 <!-- main.hbs-->
+<!--
+Citation for the following file:
+Date: 2023-11-30
+Copied as a template then based on
+Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/
+--> 
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Pokemon TCG Database</title>
 </head>
 <body>
 
