--- a/views/sets.hbs
+++ b/views/sets.hbs
@@ -1,4 +1,11 @@
 <!-- index.hbs -->
+<!--
+Citation for the following file:
+Date: 2023-11-30
+Copied as a template then based on
+Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/
+--> 
+
 <div class="home-button"><a href="/">Home</a></div>
 <h1>The sets page is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
